# trainme

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  AGENT.md  CLAUDE.md  README.md  ROADMAP.md  __main__.py  package.json  pyproject.toml  requirements.txt  setup.py  test_mcp_server.py  user_journeys.md
src/: mcp_server.py  mcp_server_test.py
src/claude/: client.py  create_workout_tool.py  retrieve_garmin_workouts_tool.py  retrieve_proposed_workouts_tool.py  retrieve_workouts_tool.py
src/custom-claude-client/: client.py  retrieve_garmin_workouts_tool.py
src/customclaudeclient/: client.py  create_workout_tool.py  retrieve_garmin_workouts_tool.py  retrieve_proposed_workouts_tool.py
src/garmin/: __init__.py  client.py  fit.py  parser.py  user_fitness_data_parser.py  user_profile_parser.py  workout_parser.py
src/garmin/models/: activity.py  run_workout.py  user_fitness_data.py  user_profile.py  workout.py
src/garmin/models/samples/: prompt.md  run.json  sample_activity.json  sample_max_stats.json  sample_retrieved_workouts.json  sample_user_profile.json  sample_workout_by_id.json
src/garmin/workouts/: running.py
tools/: garmin_cli.py  watch_and_restart.sh
