[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trainme"
version = "0.1.0"
description = "Conversational running trainer that syncs to Garmin Connect"
requires-python = ">=3.11.5"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0", 
    "click>=8.1.0",
    "cloudscraper>=1.2.0",
    "garth==0.5.13",
    "anthropic>=0.3.0",
    "fastmcp>=2.8.0",
    "pytest>=7.0.0"
]

[project.scripts]
trainme = "src.trainme_cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pylsp-mypy]
enabled = true
live_mode = true

[tool.mypy]
python_version = "3.11.5"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
